// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionsWatchAddContainer when positionId is NOT available should render PositionsWatchAddContainer correctly 1`] = `
<div
  className="inbox_container"
>
  <div
    className="inbox_widget"
  >
    <div
      className="inbox_list "
    >
      <Link
        className="nav_link"
        replace={false}
        to="/dashboard"
      >
        Back to Dashboard
      </Link>
      <PositionsList
        linkRoute="position_watch_add"
        positions={Array []}
      />
    </div>
    <Connect(PositionWatchAddDetails)
      positions={
        Array [
          Object {
            "content": Object {
              "description": "first description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "first job id",
            "location": "first location",
            "positionId": "firstPositionId",
            "title": "first title",
          },
          Object {
            "content": Object {
              "description": "second description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "second job id",
            "location": "second location",
            "positionId": "secondPositionId",
            "title": "second title",
          },
        ]
      }
      positionsWatched={
        Array [
          Object {
            "content": Object {
              "description": "first description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "first job id",
            "location": "first location",
            "notificationLevel": "ALL",
            "positionId": "firstPositionId",
            "title": "first title",
          },
          Object {
            "content": Object {
              "description": "second description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "second job id",
            "location": "second location",
            "notificationLevel": "REQUIRED",
            "positionId": "secondPositionId",
            "title": "second title",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`PositionsWatchAddContainer when positionId is available when NO positions are watched should render PositionsWatchAddContainer correctly 1`] = `
<div
  className="inbox_container"
>
  <div
    className="inbox_widget"
  >
    <div
      className="inbox_list inbox_mobile"
    >
      <Link
        className="nav_link"
        replace={false}
        to="/dashboard"
      >
        Back to Dashboard
      </Link>
      <PositionsList
        linkRoute="position_watch_add"
        positions={
          Array [
            Object {
              "content": Object {
                "description": "first description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "first job id",
              "location": "first location",
              "positionId": "firstPositionId",
              "title": "first title",
            },
            Object {
              "content": Object {
                "description": "second description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "second job id",
              "location": "second location",
              "positionId": "secondPositionId",
              "title": "second title",
            },
          ]
        }
      />
    </div>
    <Connect(PositionWatchAddDetails)
      positionId="firstPositionId"
      positions={
        Array [
          Object {
            "content": Object {
              "description": "first description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "first job id",
            "location": "first location",
            "positionId": "firstPositionId",
            "title": "first title",
          },
          Object {
            "content": Object {
              "description": "second description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "second job id",
            "location": "second location",
            "positionId": "secondPositionId",
            "title": "second title",
          },
        ]
      }
      positionsWatched={Array []}
    />
  </div>
</div>
`;

exports[`PositionsWatchAddContainer when positionId is available when all positions are watched should render PositionsWatchAddContainer correctly 1`] = `
<div
  className="inbox_container"
>
  <div
    className="inbox_widget"
  >
    <div
      className="inbox_list inbox_mobile"
    >
      <Link
        className="nav_link"
        replace={false}
        to="/dashboard"
      >
        Back to Dashboard
      </Link>
      <PositionsList
        linkRoute="position_watch_add"
        positions={Array []}
      />
    </div>
    <Connect(PositionWatchAddDetails)
      positionId="firstPositionId"
      positions={
        Array [
          Object {
            "content": Object {
              "description": "first description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "first job id",
            "location": "first location",
            "positionId": "firstPositionId",
            "title": "first title",
          },
          Object {
            "content": Object {
              "description": "second description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "second job id",
            "location": "second location",
            "positionId": "secondPositionId",
            "title": "second title",
          },
        ]
      }
      positionsWatched={
        Array [
          Object {
            "content": Object {
              "description": "first description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "first job id",
            "location": "first location",
            "notificationLevel": "ALL",
            "positionId": "firstPositionId",
            "title": "first title",
          },
          Object {
            "content": Object {
              "description": "second description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "second job id",
            "location": "second location",
            "notificationLevel": "REQUIRED",
            "positionId": "secondPositionId",
            "title": "second title",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`PositionsWatchAddContainer when positionId is available when some positions are watched should render PositionsWatchAddContainer correctly 1`] = `
<div
  className="inbox_container"
>
  <div
    className="inbox_widget"
  >
    <div
      className="inbox_list inbox_mobile"
    >
      <Link
        className="nav_link"
        replace={false}
        to="/dashboard"
      >
        Back to Dashboard
      </Link>
      <PositionsList
        linkRoute="position_watch_add"
        positions={
          Array [
            Object {
              "content": Object {
                "description": "second description",
                "requirements": Array [
                  "Skill 1",
                  "Skill 2",
                ],
                "responsibilities": Array [
                  "Responsibility 1",
                  "Responsibility 2",
                ],
              },
              "jobId": "second job id",
              "location": "second location",
              "positionId": "secondPositionId",
              "title": "second title",
            },
          ]
        }
      />
    </div>
    <Connect(PositionWatchAddDetails)
      positionId="firstPositionId"
      positions={
        Array [
          Object {
            "content": Object {
              "description": "first description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "first job id",
            "location": "first location",
            "positionId": "firstPositionId",
            "title": "first title",
          },
          Object {
            "content": Object {
              "description": "second description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "second job id",
            "location": "second location",
            "positionId": "secondPositionId",
            "title": "second title",
          },
        ]
      }
      positionsWatched={
        Array [
          Object {
            "content": Object {
              "description": "first description",
              "requirements": Array [
                "Skill 1",
                "Skill 2",
              ],
              "responsibilities": Array [
                "Responsibility 1",
                "Responsibility 2",
              ],
            },
            "jobId": "first job id",
            "location": "first location",
            "notificationLevel": "ALL",
            "positionId": "firstPositionId",
            "title": "first title",
          },
        ]
      }
    />
  </div>
</div>
`;
